--- a/RegexForm.css
+++ b/RegexForm.css
@@ -1,4 +1,4 @@
-/* styles.css */
+/* RegexForm.css */
 
 /* Reset some default styles */
 body, h1, h2, h3, h4, h5, h6, p, ul, ol, form, input, label, button, div {
